flux/manifests/03-services/kyverno/policy-reporter/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: policy-reporter
  labels:
    name: policy-reporter
