flux/manifests/03-services/kyverno/policy-reporter/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter
  namespace: policy-reporter
spec:
  parentRefs:
    - name: main-gateway
      namespace: cilium-system
      sectionName: https
  hostnames:
    - kyverno.gateway.services.apocrathia.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: policy-reporter-ui
          port: 8080
